# format-reaper

./: .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.md  suggest-feature.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  converter.rs  lib.rs  main.rs
