[package]
name = "format-reaper"
version = "1.0.0"
description = "Image and video format converter powered by FFmpeg"
authors = ["EERIE"]
edition = "2021"
default-run = "format-reaper"

[lib]
name = "format_reaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "format-reaper"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
